--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -2,6 +2,6 @@ li a {
     color: green;
 }
 
-body {
-    background: white url("images/background.gif");
-}
+/* body { */
+/*     background: white url("images/background.gif"); */
+/* } */
