--- a/polls/templates/polls/community_detail.html
+++ b/polls/templates/polls/community_detail.html
@@ -16,7 +16,7 @@
 <ul>
 {% if memberships %}
     {% for membership in memberships %}
-        <li><a href="{% url 'polls:user_detail' membership.profile.user.id %}">{{ membership.profile.user.username }}</a></li>
+        <li><a href="{% url 'polls:user_detail' membership.profile.user.id %}">{{ membership.profile.user.username }} ({{ membership.get_member_type_display }})</a></li>
     {% endfor %}
 {% else %}
     <li>None</li>
